Fixed word and letter spacing for page 2 content header 1.

--- a/site/app/css/pt-page.css
+++ b/site/app/css/pt-page.css
@@ -50,10 +50,10 @@ html, body { height: 100%; }
   font-weight: 300;
   font-size: 2.4em;
   line-height: 1;
-  letter-spacing: 2px;
+  /*letter-spacing: 2px;*/
   margin: 0;
   /*text-transform: uppercase;*/
-  word-spacing: -0.3em;
+  /*word-spacing: -0.3em;*/
 }
 
 .pt-page h1 span {
